app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
// endbower


.nav > li > a:hover, .nav > li > a:focus, a > img:focus{
  background-color: transparent;
  outline: none;
}

ul{
  display: inline;
}
ul > li {
  list-style: none;
}

/* Space out content a bit */
body {
  background-color: #469ad4;
  overflow: hidden;
}

.mobile-container{
  max-width: 100%;
  max-height: 100%;
}

/* Custom page header */
.header {
  top: 0;
  height: 60px;
  
  width: 100%;
  position: absolute;
  z-index: 50;
  a{
    position: absolute;
    z-index: 50;
    right: 0;
  }
  .closeHeader{
    padding: 0 15px 0 0;
  }
  .a:active, .a:focus, .a:visited, .a:hover{
    background: none;
  }
}

.overlay{
  background-color: #007dc5;
  opacity: 0.7;
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 49;
  bottom: 0px;
}

.fluid-container{
  .logo{
    @include center-block;
    padding-top: 10px;
    margin-bottom: -25px;
  }
  .logo-absolute {
    position: absolute;
    margin: 2% 0 0 21%;
    width: 50%;
  }
}

.content{
  .social-container, .wood-confirm-container, .wood-container{
    li{
      margin-bottom: 7%;
    }
    .login-text, .social-text{
      color: #fff;
      font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", "Calibri", sans-serif;
    }
    .login-text{
      font-size: 4vh;
      line-height: 1;
      text-align: center;
      margin-bottom: 15px;
      padding: 3% 10%;
      @include center-block;
    }
    .answer-text:active, .success-text:active, .error-text:active, .social-text:active{
      color: #fff;
    }
    .social-buttons, .btn-group{
      width: 100%;
    }
    .social-text{
      position: relative;
      margin-top: -12%;
      margin-left: 23%;
      font-size: 2.3vh;
    }
  }
  
  .answer-text:active, .success-text:active, .error-text:active{
    color: #fff;
  }

  .wood-confirm-container{
    .answer-text{
      position: relative;
      margin-top: -16%;
      font-size: 3.3vh;
      text-align: center;
    }
    .success-text{
      color: #8dc63f;
    }
    .error-text{
      color: #e06e4d;
    }
  }

  .wood-container{
    @include center-block;
    width: 100%;
    display: inline;
    .wood-1, .wood-2{
      @include center-block;
      width: 100%;
    }
    .answer-text{
      position: relative;
      margin-top: -14%;
      font-size: 3vh;
      text-align: center;
      color: #eb965f;
    }
  }

  .rope-container-left, .rope-container-right{
    position: absolute;
    height: 91%;
    width: 9px;
    top: 0;
    background-image: url('../images/rope.png');
  }

  .rope-container-left{
    margin-left: 5%;
  }

  .rope-container-right{
    margin-left: 81%; 
  }

}

.rope-left, .rope-right{
  background-image: url('../images/rope.png');
}

.rabbit-container, .hen-container{
  width: 100%;
  position: absolute;
  bottom: 0;
  z-index: 5;
}

.rabbit-container{
  z-index: 51;
  .rabbit_big, .text, .dammit{
    @include center-block;
  }
  .field_login{
    width: 100%;
    bottom: 0;
    position: absolute;
    z-index: -1;
  }
  .rabbit_big{
    max-width: 45%;
  }
  .text{
    z-index: 53;
    width: 50%;
    .login-text, .dammit{
      color: #fff;
      font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", "Calibri", sans-serif;
      font-size: 4vh;
      line-height: 1;
      text-align: center;
      margin-bottom: 15px;
    }
  }
  .dammit{
    font-size: 5vh;
    font-weight: bold;
  }
}

.hen-container{
  @include center-block;
  z-index: 52;
  .hen_big, .hands, .thanks-for-voting{
    position: absolute;
    bottom: 0;
  }

  .hen_big{
    left: 35%;
  }

  .hands{
    left: 32%;
    margin-bottom: 30px;
    min-width: 275px;
  }

  .thanks-for-voting{
    font-size: 5vh;
    line-height: 1;
    text-align: center;
    color: #fff;
    z-index: 53;
  }
}

.photo-container{
  @include center-block;
 /* margin-top: 60px; */
  width: 100%;
  .frame{
    width: 100%;
  }
  .img-frame{
    @include center-block;
    width: 86%;
    position: relative;
    margin-top: -78%;
    z-index: -1;
    -ms-transform: rotate(3deg);
    -webkit-transform: rotate(3deg);
    transform: rotate(3deg);
  }
  .login-text{
    @include center-block;
    color: #fff;
    font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", "Calibri", sans-serif;
    font-size: 3vh;
    line-height: 1;
    text-align: center;
    width: 72%;
    position: relative;
    margin-top: -60%;
  }
}

.footer {
  background-position-x: -430px;
  height: 167px;
  
  .field, .field_big, .field_login{
    width: 100%;
    bottom:0; 
    left:0;
    position: absolute;
    z-index: -3;
  }

  .barn-container{
    overflow: hidden;
    width: 150px;
    margin-right: 0;
    right:0;
    z-index: -2;
    bottom:0; 
    position: absolute;
  }
  
  .cow{
    padding: 0 0 15px 15px;
    bottom:0; 
    position: absolute;
    left: 0;
    z-index: -1;
  }

  .sheep, .rabbit{
    right: 0;
    margin-right: 16px;
    bottom:0; 
    position: absolute;
    z-index: -1;
  }

  .cow_big{
    right: 0;
    z-index: -1;
    bottom:0; 
    position: absolute;
  }

  .sheep_big, .hen{
    left:0;
    z-index: -1;
    bottom:0; 
    position: absolute;
  }

  .ostrich{
    right: 0;
    margin: 0 120px 20px;
    z-index: -1;
    bottom:0; 
    position: absolute;
  }
}

@media screen and (min-width: 750px) {

  .fluid-container .logo-absolute {
    margin: 3% 0 0 24%;
    width: 50%;
  }

  .photo-container{
    /*width: 50%;*/
  }

  .footer {
    background-position-x: 0px;
  }

  .barn-container{
    width: 200px!important;
    margin-right: 108px!important;
  }

  .ostrich{
    margin: 0 210px 20px!important;
  }

  .field, .cow, .sheep{
    display: none;
  }

  .field_big, .cow_big, .sheep_big{
    display: block;
  }

}

//Google Nexus 7 / 7.2
@media screen and (min-width: 900px) {

  .hen-container{
    z-index: 51;
    .hen_big{
      width: 29%;
      left: 35%;
    }
    .hands{
      width: 36%;
      margin-bottom: 2%;
      left: 32%;
    }
    .thanks-for-voting{
      left: 43%;
      margin-bottom: 8%;
      width: 15%;
    }
  }

}

//Amazon Kindle Fire (First Gen)
//Apple iPad 1 / 2 / iPad Mini / 3 / 4
//BlackBerry PlayBook
//Samsung Galaxy Tab
@media screen and (min-width: 1023px) { 

  .hen-container{
    z-index: 51;
    .hen_big{
      width: 29%;
      left: 35%;
    }
    .hands{
      width: 36%;
      margin-bottom: 2%;
      left: 32%;
    }
    .thanks-for-voting{
      left: 43%;
      margin-bottom: 6%;
      width: 15%;
    }
  }
}

//Google Nexus 10
//Motorola Xoom, Xyboard
//Samsung Galaxy Tab 7.7 / 8.9 / 10.1
//Generic netbook
//Notebook with touch
@media screen and (min-width: 1223px) {
  .hen-container{
    .hen_big{
      width: 32%;
      left: 35%;
    }
    .hands{
      width: 36%;
      margin-bottom: 2%;
      left: 32%;
    }
    .thanks-for-voting{
      left: 43%;
      margin-bottom: 6%;
      width: 15%;
    }
  }
}

//Notebook with HiDPI screen
@media screen and (min-width: 1440px) {


}

//Amazon Kindle Fire HDX 7"
//Amazon Kindle Fire HDX 8.9"
@media screen and (min-width: 1500px) {

  .hen-container{
    .hen_big{
      width: 25%;
      left: 39%;
    }
    .hands{
      width: 30%;
      margin-bottom: 1%;
      left: 35%;  
    }
    .thanks-for-voting{
      left: 43%;
      margin-bottom: 6%;
      width: 15%;
    }
  }
}

@media screen and (min-width: 2000px){
 
}

@media screen and (max-width: 750px) {

  .footer {
    background-position-x: 0px;
  }
}

//Motorola Droid Rarz HD
@media screen and (max-width: 720px) {

  .footer {
    background-position-x: 0px;
  }

  .field_big, .cow_big, .sheep_big{
    display: none;
  }

  .hen-container{
    .hen_big{
      width: 72%;
      left: 14%;
    }
    .hands{
      width: 72%;
      margin-bottom: 7%;
      left: 12%;
    }
    .thanks-for-voting{
      left: 30%;
      margin-bottom: 18%;
      width: 37%;
      font-size: 4vh;
      line-height: 1;
    }
  }
}

//Motorola Droid 3 / 4 / Rarz / Atrix 4G / Atrix 2
//Samsung Galaxy Note 3
//Sony Xperia Sola / U
@media screen and (max-width: 550px) {

  .footer {
    background-position-x: 0px;
  }

  .field_big, .cow_big, .sheep_big{
    display: none;
  }

  .hen-container{
    .hen_big{
      left: 13%
    }
    .hands{
      width: 400px;
      margin-bottom: 6%;
      left: 11%
    }
    .login-text{
      left: 29%;
      margin-bottom: 18%;
      font-size: 38px;
      line-height: 38px;
      width: 200px;
    }
  }
}

//BlackBerry Z10
//Google Nexus 4
//LG Optimus G / LTE / 4X HD
//Samsung Galaxy Note
@media screen and (max-width: 424px) {

  .logo-absolute{
    margin: 21% 0 0 25%;
    width: 46%;
  }

  .footer {
    background-position-x: 0px;
  }

  .field_big, .cow_big, .sheep_big{
    display: none;
  }

  .hen-container{
    .hen_big{
      width: 72%;
      left: 14%;
    }
    .hands{
      width: 36%;
      margin-bottom: 7%;
      left: 12%;
    }
    .thanks-for-voting{
      left: 30%;
      margin-bottom: 18%;
      width: 37%;
      font-size: 4vh;
      line-height: 1;
    }
  }
}

//BlackBerry Z30
//Google Nexus 5
//HTC One X / EVO LTE / Sensation / EVO 3D
//Nokia C5 / C6 / C7 / N97 / N8 / X7
//Samsung Galaxy Note 2 / S2 / Nexus / S4
//Sony Xperia S / Ion / Z / Z1
@media screen and (max-width: 380px) {


}

//Apple iPhone 3GS / 4 / 5
//Google Nexus S
//HTC Evo / Touch / Desire
//LG Optimus 2X / 3D / Black / One
//Motorola Defy / Droid / Droid X / Milestone
//Nokia Lumia 7X0 / Lumia 8XX / Lumia 900 / N800 / N900
//Samsung Galaxy S / S2 / W
@media screen and (max-width: 325px) {

  .logo {
    width: 65%;
    padding-top: 55px;
  }
  
  .logo-absolute{
    margin: 21% 0 0 29%;
    width: 36%;
  }

  .header{
    height: 60px;
  }

  .hen-container{
    .hen_big{
      width: 73%;
      left: 15%;
    }
    .hands{
      width: 30%;
      left: 7%;
      margin-bottom: 3%;
    }
    .thanks-for-voting{
      left: 27%;
      margin-bottom: 16%;
      width: 150px;
    }

  }
}

@mixin center-block {
  display: block;
  margin-left: 5%;
  margin-right: 5%;
}




/*Animations*/


.wood-1 {
  -webkit-transition: color 0.6s, background-color 0.3s;
  -moz-transition: color 0.6s, background-color 0.3s;
  -ms-transition: color 0.6s, background-color 0.3s;
  transition: color 0.6s, background-color 0.3s;
  
  label {
    display: block;
  }
  
  &.ng-enter {
    -webkit-animation: fadeInLeft 1s;
    -moz-animation: fadeInLeft 1s;
    -ms-animation: fadeInLeft 1s;
    animation: fadeInLeft 1s;
  }
  
  &.ng-leave {
    -webkit-animation: bounceOut 1s;
    -moz-animation: bounceOut 1s;
    -ms-animation: bounceOut 1s;
    animation: bounceOut 1s;
  }
}

.obj.ng-enter, .obj.ng-leave {
  -webkit-transition: 1.5s ease all;
  transition: 1.5s ease all;
}
// the "show" transition starting point
.obj.ng-enter {
  /*left: -300px;*/
  opacity: 0;
}
// the "show" transition ending point
.obj.ng-enter.ng-enter-active {
  /*left: 0px;*/
  opacity:1;
}
// the "hide" transition start point
.obj.ng-leave {
  /*left: 0px;*/
  opacity: 1;
}
// the "hide" transition end point
.obj.ng-leave-active {
  /*left: 600px;*/
  opacity: 1;
}

